objects/Project_Runner__c.object
<CustomObject>
    <description>used to move Project Pieces departmentally</description>
    <fields>
        <fullName>Age_Business_Days__c</fullName>
        <formula>IF(
   ISPICKVAL( Status__c , &quot;Completed&quot;), 
   NULL,
   CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
      0 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
      1 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
      2 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
      3 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
      4 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
      5 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
      6 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
      999) + (FLOOR(( TODAY() - DATEVALUE(CreatedDate) )/7)*5) -1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula - if the status is not Completed, it calculates the # of business days the request has been open</inlineHelpText>
        <label>Age (Business Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(  ISPICKVAL( Status__c , &quot;Completed&quot;), Null,NOw()- CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field - if the status is not Completed, it calculates the # of days the request has been open</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agile_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agile Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Runners2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_To_Manager__c</fullName>
        <formula>Designer__r.Manager.FirstName &amp;&quot; &quot;&amp;  Designer__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign To Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Project_Piece__r.Project__r.Business_Unit__c</formula>
        <inlineHelpText>Automatically pulls from the Project&apos;s Business Unit.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Notes__c</fullName>
        <label>Completion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Training_Start__c</fullName>
        <formula>Project_Piece__r.Proposed_Training_Date__c</formula>
        <inlineHelpText>formula field that reads the date from the project piece</inlineHelpText>
        <label>Confirmed Training Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <inlineHelpText>updated by workflow when the status updated to Completed</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Process__c</fullName>
        <formula>CASE( Status__c , &quot;Completed&quot;,  Date_Completed__c -  DATEVALUE(CreatedDate)  , 
&quot;Insufficient&quot;, Date_Completed__c -  DATEVALUE(CreatedDate),
null)</formula>
        <inlineHelpText>formula field that looks at the status - if the request is marked completed or insufficient, calculates the # of days from creation to completion</inlineHelpText>
        <label>Days to Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <formula>Project_Piece__r.Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that pulls the account number related to the account</inlineHelpText>
        <label>Dealer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Due_Date__c</fullName>
        <label>Design Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Time_Requested_Hours__c</fullName>
        <description>Design time requested in hours.</description>
        <formula>(Event_End_Date_Time__c - Event_Date_Time__c)*1440/60</formula>
        <label>Design Time Requested (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Requested__c</fullName>
        <formula>(Event_End_Date_Time__c - Event_Date_Time__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the time between the event start and end times</inlineHelpText>
        <label>Design Time Requested (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time__c</fullName>
        <inlineHelpText>enter the total hours and minutes spent creating design work - enter 90 minutes as 1.5 enter 75 mins as 1.25 enter, etc  - Use 15 minutes increments</inlineHelpText>
        <label>Design Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Website, Design, Creative, Integration, Marketing, SEO, SEM, SMM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Runners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Design_Time__c</fullName>
        <formula>CASE( Runner_Type__c , 
&quot;Comp&quot;, 4, 
&quot;Site&quot;, 12,
&quot;Revision&quot;, 6,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculated by the system - Comp = 4 hours, Site = 10 hours, Revision = 4 hours</inlineHelpText>
        <label>Estimated Design Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Date_Time__c</fullName>
        <inlineHelpText>Time to set even date/time for the Designer</inlineHelpText>
        <label>Event Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_End_Date_Time__c</fullName>
        <label>Event End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Goal_Met__c</fullName>
        <description>If the the Days to Process field is less or equal to three days, displays &quot;Yes&quot;, otherwise &quot;No.&quot;
For reporting purposes only.</description>
        <formula>If(Days_to_Process__c  &lt;= 3, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Met?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Instructions__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UAfr&amp;oid=00D700000008zHZ&amp;lastMod=1325109721000&quot;, &quot;Update the calendar event when changing the Assign To&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importance_Rating__c</fullName>
        <inlineHelpText>Ranks the runner as to what order it should be worked in a queue. 1 = High Priority, 5 = Low Priority</inlineHelpText>
        <label>Importance Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Notes__c</fullName>
        <label>Integration Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Graphics__c</fullName>
        <inlineHelpText>updated to the piece with workflow</inlineHelpText>
        <label>Link to Graphics</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_HTML_files__c</fullName>
        <inlineHelpText>updated to the piece by workflow</inlineHelpText>
        <label>Link to HTML files</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Proof_Site__c</fullName>
        <inlineHelpText>updated to the piece by workflow</inlineHelpText>
        <label>Link to Proof/Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_VinManager_Site__c</fullName>
        <formula>Project_Piece__r.Link_to_VinManager_Site__c</formula>
        <label>Link to VinManager Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Corrections_Needed__c</fullName>
        <description>Number of Corrections Needed</description>
        <label>Number of Corrections Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Hours__c</fullName>
        <inlineHelpText>Design Team: Number of Hours</inlineHelpText>
        <label>Number of Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_PM_Corrections__c</fullName>
        <description>Number of PM Corrections Needed</description>
        <label>Number of PM Corrections</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Piece_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to owner</description>
        <label>Project Piece Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Runners1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preview_Comments__c</fullName>
        <inlineHelpText>formula rolls up the first 97 characters of the project runner comments to allow visibility into related lists</inlineHelpText>
        <label>Preview Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Alert__c</fullName>
        <formula>CASE(  Priority__c  , 
&quot;2 - Supervisor&quot;,  IMAGE(&quot;servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&amp;lastMod=1326845376000&quot;, &quot;HOT&quot;), 
&quot;1 - Department&quot;, IMAGE(&quot;servlet/servlet.ImageServer?id=01570000000xzUL&amp;oid=00D700000008zHZ&amp;lastMod=1320445914000&quot;, &quot;NOW&quot;),
Null)</formula>
        <label>Priority Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Normal</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Project_Piece__r.Product_Name__c</formula>
        <inlineHelpText>formula field that reads the product name from the related project piece</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Email__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Project Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Piece_Stage__c</fullName>
        <formula>IF( ISPICKVAL(Project_Piece__r.Project_Piece_Stage__c, &quot;Completed&quot;),&quot;Completed&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field - looks at the project piece stage and if Completed, shows Completed otherwise the field is blank</inlineHelpText>
        <label>Project Piece Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Piece__c</fullName>
        <label>Project Piece</label>
        <referenceTo>Project_Piece__c</referenceTo>
        <relationshipLabel>Project Runners</relationshipLabel>
        <relationshipName>Project_Runners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposed_Training_Start__c</fullName>
        <formula>Project_Piece__r.Confirmed_Training_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the Confirmed Training Start Date from the Project Piece</inlineHelpText>
        <label>Proposed Training Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resend_Updated_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used when the project runner notes have been edited and updated</inlineHelpText>
        <label>Resend Updated Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision_Status__c</fullName>
        <label>Correction/Revision Status</label>
        <picklist>
            <controllingField>Runner_Type__c</controllingField>
            <picklistValues>
                <fullName>Internal QA Correction(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Requested Revision(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction Revision(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Correction(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Run_To__c</fullName>
        <label>Run To</label>
        <picklist>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Runner_Action__c</fullName>
        <label>Runner Action</label>
        <picklist>
            <picklistValues>
                <fullName>Go Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Pull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Runner_Owner__c</fullName>
        <label>Claimed By</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Runner_Type__c</fullName>
        <label>Runner Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request</fullName>
                <color>#FFFF66</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
                <color>#66FF99</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pending DMS</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pending DEV</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Uploading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#660000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Goal Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal Missed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup Ticket # related to Request</inlineHelpText>
        <label>Ticket#</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Project Runners</relationshipLabel>
        <relationshipName>Project_Runners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Runner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Owner_Email__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Design_Requests</fullName>
        <columns>Design_Due_Date__c</columns>
        <columns>Importance_Rating__c</columns>
        <columns>Number_of_Hours__c</columns>
        <columns>Priority_Alert__c</columns>
        <columns>Product_Name__c</columns>
        <columns>NAME</columns>
        <columns>Runner_Type__c</columns>
        <columns>Runner_Action__c</columns>
        <columns>Revision_Status__c</columns>
        <columns>Designer__c</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Design_Time_Requested__c</columns>
        <columns>Design_Time_Requested_Hours__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Runner_Action__c</field>
            <operation>equals</operation>
            <value>Request</value>
        </filters>
        <filters>
            <field>Run_To__c</field>
            <operation>equals</operation>
            <value>Creative</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/19/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Runner__c.Project_Runner_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>!All Design Requests</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CreativeDirector</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Director_of_Websites</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VPofInteractiveMarketing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Design_Requests_Abair</fullName>
        <columns>Design_Due_Date__c</columns>
        <columns>Importance_Rating__c</columns>
        <columns>Priority_Alert__c</columns>
        <columns>Number_of_Hours__c</columns>
        <columns>Runner_Type__c</columns>
        <columns>Revision_Status__c</columns>
        <columns>Project_Piece__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Product_Name__c</columns>
        <columns>Designer__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Design_Time_Requested_Hours__c</columns>
        <columns>Design_Time_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Runner_Action__c</field>
            <operation>equals</operation>
            <value>Request</value>
        </filters>
        <filters>
            <field>Run_To__c</field>
            <operation>equals</operation>
            <value>Creative</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/17/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Designer__c</field>
            <operation>equals</operation>
            <value>amanda baird</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>!All Design Requests - Amanda Baird</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CreativeDirector</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Director_of_Websites</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VPofInteractiveMarketing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Design_Requests_Abbey_Russell</fullName>
        <columns>Design_Due_Date__c</columns>
        <columns>Importance_Rating__c</columns>
        <columns>Number_of_Hours__c</columns>
        <columns>Priority_Alert__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Runner_Type__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Project_Piece__c</columns>
        <columns>NAME</columns>
        <columns>Designer__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Design_Time_Requested_Hours__c</columns>
        <columns>Design_Time_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Runner_Action__c</field>
            <operation>equals</operation>
            <value>Request</value>
        </filters>
        <filters>
            <field>Run_To__c</field>
            <operation>equals</operation>
            <value>Creative</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>greaterThan</operation>
            <value>8/17/2012</value>
        </filters>
        <filters>
            <field>Designer__c</field>
            <operation>equals</operation>
            <value>Abbey Russell</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>!All Design Requests - Abbey Russell</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>CreativeDirector</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Director_of_Websites</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VPofInteractiveMarketing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>WebsiteSupportManager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Design_Requests_Alex_Hanson</fullName>
        <columns>Design_Due_Date__c</columns>
        <columns>Importance_Rating__c</columns>
        <columns>Priority_Alert__c</columns>
        <columns>Number_of_Hours__c</columns>
        <columns>Runner_Type__c</columns>
        <columns>Revision_Status__c</columns>
        <columns>Project_Piece__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Product_Name__c</columns>
        <columns>Designer__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Design_Time_Requested_Hours__c</columns>
        <columns>Design_Time_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Runner_Action__c</field>
            <operation>equals</operation>
            <value>Request</value>
        </filters>
        <filters>
            <field>Run_To__c</field>
            <operation>equals</operation>
            <value>Creative</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/17/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Designer__c</field>
            <operation>equals</operation>
            <value>Alex Hanson</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>!All Design Requests - Alex Hanson</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CreativeDirector</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Director_of_Websites</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VPofInteractiveMarketing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Design_Requests_Andrea_McDaniel</fullName>
        <columns>Design_Due_Date__c</columns>
        <columns>Importance_Rating__c</columns>
        <columns>Number_of_Hours__c</columns>
        <columns>Priority_Alert__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Runner_Type__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Project_Piece__c</columns>
        <columns>NAME</columns>
        <columns>Designer__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Design_Time_Requested_Hours__c</columns>
        <columns>Design_Time_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Runner_Action__c</field>
            <operation>equals</operation>
            <value>Request</value>
        </filters>
        <filters>
            <field>Run_To__c</field>
            <operation>equals</operation>
            <value>Creative</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/17/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Designer__c</field>
            <operation>equals</operation>
            <value>Andrea McDaniel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>!All Design Requests - Andrea McDaniel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>CreativeDirector</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Director_of_Websites</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VPofInteractiveMarketing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>WebsiteSupportManager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Design_Requests_Ashley_Martin</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Design_Due_Date__c</columns>
        <columns>Importance_Rating__c</columns>
        <columns>Priority_Alert__c</columns>
        <columns>Number_of_Hours__c</columns>
        <columns>Runner_Type__c</columns>
        <columns>Revision_Status__c</columns>
        <columns>Project_Piece__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Design_Time_Requested_Hours__c</columns>
        <columns>Design_Time_Requested__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Designer__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Runner_Action__c</field>
            <operation>equals</operation>
            <value>Request</value>
        </filters>
        <filters>
            <field>Run_To__c</field>
            <operation>equals</operation>
            <value>Creative</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/17/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Designer__c</field>
            <operation>equals</operation>
            <value>Ashley Martin</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>!All Design Requests - Ashley Martin</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CreativeDirector</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Director_of_Websites</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VPofInteractiveMarketing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>